--- a/dnc-ecommerce/src/components/Header/index.scss
+++ b/dnc-ecommerce/src/components/Header/index.scss
@@ -5,6 +5,7 @@
     padding: 2rem;
     background-color: #7a7a7a26;
     align-items: center;
+    width: 100%;
 
     a {
        text-decoration: none;
